added normalize, global css, color variables, wrapper module

--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,2 +1,4 @@
-@import './base/global';
+@import './node_modules/normalize-scss/sass/normalize/import-now';
 @import './base/variables';
+@import './base/global';
+@import './modules/wrapper';
