--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -1,4 +1,9 @@
 @import './node_modules/normalize-scss/sass/normalize/import-now';
 @import './base/variables';
 @import './base/global';
+@import './modules/page-section';
 @import './modules/wrapper';
+@import './modules/flex-row';
+@import './modules/columns';
+@import './modules/page-section-header';
+@import './modules/btn';
