--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -429,22 +429,22 @@ body {
 
 .page-section {
   min-height: 100vh; }
-  .page-section-header {
-    max-width: 1023px;
+  .page-section__header {
+    max-width: 1000px;
     width: 100%;
     margin: 0 auto; }
-    .page-section-header__image {
+    .page-section__header__image {
       text-align: center; }
-    .page-section-header__content-heading {
+    .page-section__header__content-heading {
       color: #3B4045;
       font-size: 3.5rem;
       padding: 15px;
       text-align: center; }
       @media (min-width: 800px) {
-        .page-section-header__content-heading {
+        .page-section__header__content-heading {
           text-align: left;
           margin-top: 0; } }
-    .page-section-header p {
+    .page-section__header p {
       font-size: 1.25rem;
       color: #777;
       margin-bottom: 50px;
