--- a/app/assets/styles/modules/_flex-row.scss
+++ b/app/assets/styles/modules/_flex-row.scss
@@ -6,4 +6,10 @@
 		align-items: center;
 		justify-content: center;
 	}
+
+	&--even-spacing {
+		justify-content: space-around;
+		margin: 0 100px;
+		align-items: center;
+	}
 }
