tweaked our-features section (wrong branch)

--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -2,8 +2,10 @@
 @import './base/variables';
 @import './base/global';
 @import './base/mixins';
-@import './modules/page-section';
 @import './modules/wrapper';
 @import './modules/flex-row';
 @import './modules/columns';
 @import './modules/btn';
+@import './modules/page-section';
+@import './modules/header';
+@import './modules/our-features';
