--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -9,3 +9,4 @@
 @import './modules/page-section';
 @import './modules/header';
 @import './modules/our-features';
+@import './modules/professional-design';
