--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -10,3 +10,4 @@
 @import './modules/header';
 @import './modules/our-features';
 @import './modules/professional-design';
+@import './modules/choose-apple-watch';
