--- a/app/assets/styles/styles.scss
+++ b/app/assets/styles/styles.scss
@@ -11,3 +11,4 @@
 @import './modules/our-features';
 @import './modules/professional-design';
 @import './modules/choose-apple-watch';
+@import './modules/amazing-shots';
